--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,5 +1,14 @@
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
 <!-- SECTION -->
-<div class="section">
+<div class="section" *ngIf="cartTotal > 0">
     <!-- container -->
     <div class="container">
         <!-- row -->
@@ -164,7 +173,7 @@
                         I've read and accept the <a href="#">terms & conditions</a>
                     </label>
                 </div>
-                <a href="#" class="primary-btn order-submit">Place order</a>
+                <button class="btn btn-outline-danger btn-sm my-2 btn-block order-submit" [disabled]="cartTotal <= 0 " (click)="onCheckout()">Place order</button>
             </div>
             <!-- /Order Details -->
         </div>
@@ -173,3 +182,8 @@
     <!-- /container -->
 </div>
 <!-- /SECTION -->
+
+<div class="text-center my-5" *ngIf="cartData.total <= 0;">
+    <h4>Your Cart Is Empty</h4>
+    <button class="btn btn-primary btn-lg mt-3" routerLink="/">GO TO SHOP</button>
+</div>
