--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
                 <div class="col-md-3">
                     <div class="header-logo">
                         <a href="#" class="logo">
-                            <img src="/assets/img/logo.png" alt="">
+                            <img src="/assets/img/logo.png" alt="" style="width: 200px">
                         </a>
                     </div>
                 </div>
