--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,8 +38,8 @@
                         <form>
                             <select class="input-select">
                                 <option value="0">All Categories</option>
-                                <option value="1">Category 01</option>
-                                <option value="1">Category 02</option>
+                                <option value="1">Shoes</option>
+                                <option value="2">Electronics</option>
                             </select>
                             <input class="input" placeholder="Search here">
                             <button class="search-btn">Search</button>
@@ -122,8 +122,6 @@
             <!-- NAV -->
             <ul class="main-nav nav py-3">
                 <li class="active"><a routerLink="/">Home</a></li>
-                <li><a href="#">Hot Deals</a></li>
-                <li><a href="#">Categories</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <!-- /NAV -->
