--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,11 +9,11 @@
                 <div class="col-md-3 col-xs-6">
                     <div class="footer">
                         <h3 class="footer-title">About Us</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+                        <p>Welcome to Hangnoidiauc.vn.</p>
                         <ul class="footer-links">
-                            <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                            <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                            <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+                            <li><a href="#"><i class="fa fa-map-marker"></i>Binh Thuy, Can Tho</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i>+84-972-855-708</a></li>
+                            <li><a href="#"><i class="fa fa-envelope-o"></i>info@hangnoidiauc.vn</a></li>
                         </ul>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                         <h3 class="footer-title">Information</h3>
                         <ul class="footer-links">
                             <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="/contact">Contact</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Orders and Returns</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
