--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,12 +4,12 @@
     <div id="top-header">
         <div class="container">
             <ul class="header-links pull-left">
-                <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+                <li><a href="#"><i class="fa fa-phone"></i> +84-972-855-708</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o"></i> info@hangnoidiauc.vn</a></li>
+                <li><a href="#"><i class="fa fa-map-marker"></i> Binh Thuy, Can Tho</a></li>
             </ul>
             <ul class="header-links pull-right">
-                <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
+                <li><a href="/register"><i class="fa fa-sign-in"></i>{{authState == false ? 'REGISTER' : ''}}</a></li>
                 <li><a routerLink="/profile"><i class="fa fa-user-o"></i> {{authState == false ? 'LOGIN' : 'My Account'}}</a></li>
             </ul>
         </div>
@@ -122,7 +122,7 @@
             <!-- NAV -->
             <ul class="main-nav nav py-3">
                 <li class="active"><a routerLink="/">Home</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="/contact">Contact Us</a></li>
             </ul>
             <!-- /NAV -->
         </div>
