--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -413,7 +413,7 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #1E1F29;
+  background-color: #8d99ae;
 }
 
 .header-links li {
@@ -446,7 +446,7 @@ textarea.input {
 #header {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #15161D;
+  background-color: #8d99ae;
 }
 
 .header-logo {
@@ -2002,7 +2002,7 @@ textarea.input {
 ===========================================================*/
 
 #footer {
-  background: #15161D;
+  background: #8d99ae;
   color: #B9BABC;
 }
 
